# python_parser_CLI_app

./: .env  .env.example  .env_example  .gitignore  README.md  commands.py  con_menu.py  dict_all_content.json  dict_learning_content.json  dict_learning_id.json  log3.py  main.py  process_cmdline.py  pyproject.toml  requirements.txt  run.py
Check_path/: check_src_path.py
Json/: extracting_json.py  filter_json.py  json_execution.py  json_file_checker.py  json_search.py
Telegram/: retry_after_send_msg.py  tg_bot.py
data/: structuring_folder.md
django_orm/: main.py  settings.py
django_orm/db/: db_functions.py  db_save.py  models.py  save_to_db.py  unused_functions.py
docs/database/: saving2db.md
docs/folders/: functions.md
file_copy/: .gitignore  check_create_folder.py  check_file_exists.py  copy_file_foreach.py  copy_shutil.py  correct_name_url_file.py  create_txt_file_for_folders.py  file_copy_functions.py  find_https_link.py  remove_http_for_folders.py  test_folder.py  text_names_of_db.txt
main_functions/: collector_func.py  copy_file_foreach.py  copy_file_main.py  copy_file_process.py  file_copy_process.py  main_channel_empty.py  main_func.py  main_parsing_new.py  parsing_process.py  process_cmdline.py  run.py
md/: README.md
parsing/: foreach_parser.py  functions.py  other_functions.py  parser.py  parser_unittest.py  parser_v_2.py  unittests.mhtml
structure_foldering/: custo_extension.py  foldering_unittest.py  functions.py  structuring_folder.py  year_converter.py
version2/: db_save.py  other_functions.py  parser_v_2.py
(+23 files in other folders)
