[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tp"
version = "0.1.0"
description = "A CLI application that parse data. Smart Software"
readme = "README.md"
authors = [{ name = "AI team", email = "hunter2forap@gmail.com" }]
dependencies = [
    "python-dotenv",
    "click",
    "django",
    "psycopg2-binary",
    "psycopg2",
    "beautifulsoup4",
    "pytz",
    "--upgrade sentry-sdk[django]",
    "rich"
]

[project.scripts]
calc = "commands:parser"